--- a/Projects/rentacar.html
+++ b/Projects/rentacar.html
@@ -13,6 +13,7 @@
 		<link rel='stylesheet' type='text/css' href='../css/style.css' >
 		<link rel='stylesheet' type='text/css' href='../css/color-default.css' >
 		<link rel="icon" href="../img/favicon.png" type="image/x-icon">
+		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	</head>
 	<body>
 		<a href='../portfolio.html' class='close-btn' >
