--- a/cert.html
+++ b/cert.html
@@ -15,6 +15,7 @@
 		<link rel='stylesheet' type='text/css' href='css/color-blue.css' >
 		<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 		<link rel="icon" href="img/favicon.png" type="image/x-icon">
+		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	</head>
 	<body>
 		<a href='index.html' class='close-btn' >
