--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel='stylesheet' type='text/css' href='css/style.css' >
 		<link rel='stylesheet' type='text/css' href='css/color-blue.css' >
 		<link rel="icon" href="img/favicon.png" type="image/x-icon">
+		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	</head>
 	<body>
 		<div id='preloader' >
