--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
 		<link rel='stylesheet' type='text/css' href='css/style.css' >
 		<link rel='stylesheet' type='text/css' href='css/color-blue.css' >
 		<link rel="icon" href="img/favicon.png" type="image/x-icon">
+		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	</head>
 	<body>
 		<a href='index.html' class='close-btn' >
@@ -367,6 +368,24 @@
 												</li>
 												<li>
 													<a href='img/portfolio/calculadora.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='item' data-groups='["all","htmlcss"]' >
+								<div class='inner' >
+									<img alt='rentacar' src='img/portfolio/pizza.jpg' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Calculator</h4>
+											<ul class='links' >
+												<li>
+													<a href='Projects/pizza.html' ><i class='ion-ios-plus-empty' ></i></a>
+												</li>
+												<li>
+													<a href='img/portfolio/pizza.jpg' class='image-link' ><i class='ion-ios-search' ></i></a>
 												</li>
 											</ul>
 										</div>
