--- a/portfolio.html
+++ b/portfolio.html
@@ -379,7 +379,7 @@
 									<img alt='rentacar' src='img/portfolio/pizza.jpg' >
 									<div class='caption' >
 										<div class='caption-inner' >
-											<h4>Calculator</h4>
+											<h4>Las Mejores Pizzas</h4>
 											<ul class='links' >
 												<li>
 													<a href='Projects/pizza.html' ><i class='ion-ios-plus-empty' ></i></a>
