--- a/cert.html
+++ b/cert.html
@@ -45,6 +45,7 @@
 								<li><a href='#' data-group='all' class='active' >All</a></li>
 								<li><a href='#' data-group='microsoft'><i class='ion-social-windows'></i></a></li>
 								<li><a href='#' data-group='udemy'><iconify-icon icon="simple-icons:udemy"></iconify-icon></a></li>
+								<li><a href='#' data-group='codfas'><iconify-icon icon="ion-android-globe"></iconify-icon></a></li>
 								<li><a href='#' data-group='other'>Other</a></li>
 							</ul>
 						</div>
@@ -268,6 +269,98 @@
 											<ul class='links' >
 												<li>
 													<a href='img/cert/Taller de Metodologias.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='item' data-groups='["all","microsoft"]' >
+								<div class='inner' >
+									<img alt='IntroGit' src='img/cert/UsodeGitHubCopilotconPython.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Uso de GitHub Copilot con Python</h4>
+											<ul class='links' >
+												<li>
+													<a href='img/cert/UsodeGitHubCopilotconPython.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='item' data-groups='["all","microsoft"]' >
+								<div class='inner' >
+									<img alt='IntroGit' src='img/cert/UsodeGitHubCopilotconJavaScript.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Uso de GitHub Copilot con JavaScript</h4>
+											<ul class='links' >
+												<li>
+													<a href='img/cert/UsodeGitHubCopilotconJavaScript.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='item' data-groups='["all","microsoft"]' >
+								<div class='inner' >
+									<img alt='IntroGit' src='img/cert/Proyectodedesafio.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Proyecto Desafio agregar funcionalidades</h4>
+											<ul class='links' >
+												<li>
+													<a href='img/cert/Proyectodedesafio.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class='item' data-groups='["all","microsoft"]' >
+								<div class='inner' >
+									<img alt='IntroGit' src='img/cert/Proyectodedesafio2.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Proyecto Desafio crear una consola</h4>
+											<ul class='links' >
+												<li>
+													<a href='img/cert/Proyectodedesafio2.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class='item' data-groups='["all","codfas"]' >
+								<div class='inner' >
+									<img alt='IntroGitHub' src='img/cert/CursoProfesionalDesarrolloWeb.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Curso Profesional de Desarrollo Web</h4>
+											<ul class='links' >
+												<li>
+													<a href='img/cert/CursoProfesionalDesarrolloWeb.png' class='image-link' ><i class='ion-ios-search' ></i></a>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class='item' data-groups='["all","codfas"]' >
+								<div class='inner' >
+									<img alt='IntroGitHub' src='img/cert/CursodeHerramientasyconceptosFrontend.png' >
+									<div class='caption' >
+										<div class='caption-inner' >
+											<h4>Curso de Herramientas y Conceptos Frontend</h4>
+											<ul class='links' >
+												<li>
+													<a href='img/cert/CursodeHerramientasyconceptosFrontend.png' class='image-link' ><i class='ion-ios-search' ></i></a>
 												</li>
 											</ul>
 										</div>
