--- a/resume.html
+++ b/resume.html
@@ -82,74 +82,74 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
                             <div class="history-block">
-                                <div class="section-title light clear">
+                                <div class="section-title light clear centradoexp">
                                     <h3>Hightlights</h3>
                                 </div>
                                 <div class="history-scroller">
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-tools"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>TOEFL Test IBT / PBT - 583</h5>
                                             <span>2001</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-ion-bookmark"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>XI National Chemistry Olympiad <br> Honorific Mention</h5>
                                             <span>2002</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-ion-bookmark"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>XII National Chemistry Olympiad <br> Honorific Mention</h5>
                                             <span>2003</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-ion-calculator"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>University - Mechatronics Engineer</h5>
                                             <span>2003 - 2008</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-tools"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>TOEIC Test - 920</h5>
                                             <span>2011</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-ion-bookmark"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>Six Sigma Certification</h5>
                                             <span>2015 - 2016</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-profile-male"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>Volunteer ResilienteMX <br> Veracruz Coordinator</h5>
@@ -161,21 +161,21 @@
                         </div>
                         <div class="col-xs-12 col-sm-6">
                             <div class="history-block">
-                                <div class="section-title light clear">
+                                <div class="section-title light clear centradoexp">
                                     <h3>Experience</h3>
                                 </div>
                                 <div class="history-scroller">
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-ion-laptop"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>XTAC Technical support engineer</h5>
                                             <span>2021-2023</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
                                             <i class="tf-documents5"></i>
@@ -185,44 +185,54 @@
                                             <span>2019-2021</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-profile-male"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>Branch Responsible</h5>
                                             <span>2017-2019</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-tools-2"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>Senior design and programmer engineer</h5>
                                             <span>2016-2017</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-ion-laptop"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>Telecom: Integration, Design & <br>Optimization Engineer</h5>
                                             <span>2011-2016</span>
                                         </div>
                                     </div>
-                                    <div class="history-item">
+                                    <div class="history-item maya">
                                         <div class="history-icon">
                                             <span class="history-hex"></span>
-                                            <i class="tf-documents5"></i>
+                                            <i class="tf-tools"></i>
                                         </div>
                                         <div class="history-text">
                                             <h5>Electronic equipment designer</h5>
                                             <span>2008-2009</span>
+                                        </div>
+                                    </div>
+                                    <div class="history-item maya">
+                                        <div class="history-icon">
+                                            <span class="history-hex2"></span>
+                                            <i class=""></i>
+                                        </div>
+                                        <div class="history-text">
+                                            <h5></h5>
+                                            <span></span>
                                         </div>
                                     </div>
                                 </div>
